# kakushi

./: .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml
examples/: openai_demo.py
scripts/: eval.py
space/: README.md  app.py  requirements.txt
src/kakushi/: __init__.py  masker.py  ner.py  normalizer.py  patterns.py  resolver.py  synth.py  types.py
tests/: test_masker.py  test_ner.py  test_normalizer.py  test_patterns.py  test_resolver.py  test_synth.py
